fix infuser blockstate not updating properly